Lightweight notifications support